@@ -1,4 +1,4 @@
-.TH darkice 1 "January 25, 2006" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "January 14, 2007" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -49,6 +49,7 @@ is run as root.
 .TP
 .BI "\-c " config.file
 Specifies what configuration file to use.
+If not specified, /etc/darkice.cfg will be used.
 
 .TP
 .BI "\-v " n
